--- a/index.toml
+++ b/index.toml
@@ -269,6 +269,10 @@ file = "mods/content/supplementaries-squared.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/coroutil.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/delightful-creators-fabric.pw.toml"
 metafile = true
 
@@ -310,6 +314,10 @@ metafile = true
 
 [[files]]
 file = "mods/frights-delight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/fullstack-watchdog.pw.toml"
 metafile = true
 
 [[files]]
@@ -885,6 +893,10 @@ file = "mods/performance/spark.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/show-me-what-you-got.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/plasmo-voice.pw.toml"
 metafile = true
 
@@ -1078,6 +1090,22 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/visual/visuality.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/villager-names.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/vmp-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/what-are-they-up-to.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/windchimes.pw.toml"
 metafile = true
 
 [[files]]
