--- a/mods/tweaks/gameplay/lootr.pw.toml
+++ b/mods/tweaks/gameplay/lootr.pw.toml
@@ -1,6 +1,6 @@
 name = "Lootr"
 filename = "lootr-1.20-0.7.30.77.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/EltpO5cN/versions/RJksbmWs/lootr-1.20-0.7.30.77.jar"
