--- a/index.toml
+++ b/index.toml
@@ -13,6 +13,9 @@ file = "config/bluemap/core.conf"
 file = "config/builtinservers.json"
 
 [[files]]
+file = "config/craftpresence.json"
+
+[[files]]
 file = "config/paxi/datapack_load_order.json"
 
 [[files]]
