--- a/index.toml
+++ b/index.toml
@@ -56,14 +56,6 @@ file = "mods/ae2/applied-energistics-2-wireless-terminals.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/armorful.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/bl4cks-sit.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/bluemap/bluemap-offline-player-markers-(fabric).pw.toml"
 metafile = true
 
@@ -301,10 +293,6 @@ metafile = true
 
 [[files]]
 file = "mods/emi/emitrades.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/fabric-seasons.pw.toml"
 metafile = true
 
 [[files]]
@@ -648,11 +636,43 @@ file = "mods/gwaaa4/what-are-they-up-to.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/immersive-snow.pw.toml"
+file = "mods/gwaaa5/armorful.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/let-sleeping-dogs-lie.pw.toml"
+file = "mods/gwaaa5/bl4cks-sit.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/fabric-seasons.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/immersive-snow.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/let-sleeping-dogs-lie.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/perfect-plushies.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/player-ladder.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/sound.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/windchimes.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/gwaaa5/wolves-of-other-furs.pw.toml"
 metafile = true
 
 [[files]]
@@ -860,10 +880,6 @@ file = "mods/overhauls/village/ctov-friends-and-foes-compat.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/perfect-plushies.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/performance/bobby.pw.toml"
 metafile = true
 
@@ -925,14 +941,6 @@ metafile = true
 
 [[files]]
 file = "mods/performance/spark.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/player-ladder.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/sound.pw.toml"
 metafile = true
 
 [[files]]
@@ -1129,14 +1137,6 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/visual/visuality.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/windchimes.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/wolves-of-other-furs.pw.toml"
 metafile = true
 
 [[files]]
